--- a/css/estilo.css
+++ b/css/estilo.css
@@ -290,9 +290,9 @@ header{
 
 /* Modal content */
 .modal-container{
-    width: 40%;
+    width: 70%;
     margin: 0 5%;
-    max-height: 88vh;
+    max-height: 70vh;
     color: #ffffff;
     background-color: #121212;
     display: flex;
@@ -326,11 +326,11 @@ header{
 }
 
 .modal-container > .modal-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    display:flex;
+    flex-direction:initial;
+    justify-content:space-evenly;
     align-items: center;
-    width: 70%;
+    width: 120%;
     margin: 10px;
 }
 
@@ -344,4 +344,22 @@ header{
     padding: 20px;
     text-align: center;
     padding-top: 20px;
+}
+
+/* delete button product */
+.delete-product {
+    cursor: pointer;
+}
+
+/* Contador-Carrito */
+.cantidad-carrito {
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    font-size: 13px;
+    padding: 7px;
+    top: 39px;
+    right: 110px;
+    position: absolute;
+    display: none;
 }
